refactor: Update gifenc dependency and path
Updates the `gifenc` dependency to a specific version (1.0.3) in `package.json` and adjusts the import path in `index.html` to point to the correct CDN location for this version. This ensures consistent behavior and leverages a stable version of the GIF encoding library.

Also includes minor CSS and app logic adjustments.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@google/genai": "latest",
     "auto-zustand-selectors-hook": "latest",
     "clsx": "latest",
-    "gifenc": "latest",
+    "gifenc": "1.0.3",
     "immer": "latest",
     "lodash.shuffle": "latest",
     "p-limit": "latest",
