feat: Switch from Google Gemini to Vercel AI Gateway
- Replace Google GenAI with Vercel AI Gateway using OpenAI SDK
- Add VITE_AI_GATEWAY_API_KEY environment variable
- Use google/gemini-2.5-flash-image-preview model through AI Gateway
- Simplify error handling with single unified API
- Update dependencies: add ai, @ai-sdk/openai, openai, zod
- Remove deprecated Gemini API keys from env files

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# Google Gemini API Keys (multiple for rotation)
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
-VITE_GEMINI_API_KEY_2=your_gemini_api_key_2_here
-VITE_GEMINI_API_KEY_3=your_gemini_api_key_3_here
-VITE_GEMINI_API_KEY_4=your_gemini_api_key_4_here
+# Vercel AI Gateway
+VITE_AI_GATEWAY_API_KEY=your_ai_gateway_api_key_here
+
+# Google Gemini API Keys (multiple for rotation) - DEPRECATED, using AI Gateway now
+# VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# VITE_GEMINI_API_KEY_2=your_gemini_api_key_2_here
+# VITE_GEMINI_API_KEY_3=your_gemini_api_key_3_here
+# VITE_GEMINI_API_KEY_4=your_gemini_api_key_4_here
 
 # Clerk Authentication
 VITE_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
